--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 }
 
 /* Generics */
+
 body{
     font-family: 'Montserrat', sans-serif;
     overflow-y: hidden;
@@ -13,7 +14,6 @@ body{
 /*Utils Layout*/
 
 .container{
-    border: 2px solid green;
     width: 200px;
 }
 
@@ -30,21 +30,21 @@ body{
 .main-content{
     border: 2px dashed red;
     height: 800px;
-    width: 1400px;
-}
-
-.container-side-main{
-    border: 10px solid gold;
+    width: 1800px;
 }
 
 /* Hover effects */
+
+/* SideBar */
 .hover-effect:hover .col{
     background-color: white;
     background-color: rgba(255, 255, 255, 0.4)
 }
 
 
+
 /* Header */
+
 /* Navbar */
 .navbar .navbar-brand img{
     max-width: 50px;
@@ -69,6 +69,9 @@ body{
 }
 
 
+
+/* Main */
+
 /* Sidebar */
 
 .side-bar i{
@@ -81,6 +84,11 @@ body{
     padding: 0px 5px;
     font-size: 18px;
 }
+
+
+
+/* Main Content */
+
 
 
 /* Dimesioni 576 768 992 1200 */
